[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cliclo"
version = "5.1.3"
description = "Command Line Interface Comic Library Organizer — batch-tagging a comic library with ComicVine metadata by driving the ComicTagger CLI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "phattbeats" },
]
keywords = [
    "comic",
    "comics",
    "cbz",
    "cbr",
    "comictagger",
    "comicvine",
    "metadata",
    "tagger",
    "library",
    "organizer",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Graphics",
]

# Runtime dependencies. CLICLO's core pipeline is stdlib-only; the only
# optional extra is `requests` for Pushover phone notifications, exposed as
# an optional extra-install so the base install stays slim.
dependencies = []

[project.optional-dependencies]
pushover = ["requests"]
rar = ["rarfile"]
all = ["requests", "rarfile"]

[project.scripts]
cliclo = "cliclo:main"

[project.urls]
Homepage = "https://github.com/phattbeats/cliclo"
Issues = "https://github.com/phattbeats/cliclo/issues"
Changelog = "https://github.com/phattbeats/cliclo/blob/main/CHANGELOG.md"

[tool.setuptools]
# Single-module layout: cliclo.py at the repo root is the whole package.
# `py-modules` tells setuptools to ship it as `cliclo.py` and the `[project.scripts]`
# entry above imports `cliclo.main` from it directly.
py-modules = ["cliclo"]

[tool.setuptools.package-data]
cliclo = ["cliclo.ini.example"]